[package]
name = "keep-instant-replay-on"
version = "1.0.0"
authors = ["Piotr Placzek <piotrpdev@gmail.com>"]
edition = "2024"
rust-version = "1.85.0"
description = "Enable Nvidia ShadowPlay Instant Replay when it isn't."
repository = "https://github.com/piotrpdev/keep-instant-replay-on"
license = "GPL-3.0"
keywords = ["nvidia", "shadowplay", "instant", "replay"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.98"
argh = "0.1.13"
minreq = { version = "2.13.4", features = ["json-using-serde"] }
scopeguard = "1.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
windows = { version = "0.61.1", features = ["Win32_System_Memory"] }

[lints.rust]
unsafe_code = "allow"
unused_imports = "warn"
unused_variables = "deny"
unused_must_use = "deny"
dead_code = "warn"
missing_docs = "allow"
async_fn_in_trait = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
redundant_pub_crate = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "deny"
unreachable = "deny"
todo = "deny"
unimplemented = "deny"
await_holding_lock = "deny"
indexing_slicing = "deny"
float_cmp = "deny"
modulo_one = "deny"
missing_errors_doc = "allow"
